--- a/.github/workflows/reusable/deploy_bicep.yaml
+++ b/.github/workflows/reusable/deploy_bicep.yaml
@@ -1,49 +1,49 @@
 name: Deploy Bicep
 
 on:
-    workflow_call:
-        inputs:
-            environment:
-                required: true
-                description: 'The environment to deploy to and what parameters to use'
-                type: string
+  workflow_call:
+    inputs:
+      environment:
+        required: true
+        description: 'The environment to deploy to and what parameters to use'
+        type: string
 
 jobs:
-    deploy:
-        name: 'Deploy Bicep - ${{ upper(github.event.inputs.environment) }}'
-        runs-on: ubuntu-latest
-        steps:
-            - name: Checkout
-              uses: actions/checkout@v4
-            - name: 'Az CLI login'
-              uses: azure/login@v1
-              with:
-                client-id: ${{ secrets.AZURE_CLIENT_ID }}
-                tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-                subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-            - name: Bicep What-If
-              id: whatif
-              uses: Azure/cli@v1
-              with:
-                inlineScript: |
-                    az bicep what-if --file src/main.bicep --parameters src/parameters/${{ github.event.inputs.environment }}.bicepparam
-            - name: Show What-If Plan
-              run: |
-                echo "${{ steps.whatif.outputs.stdout }}"
-            - name: Wait for approval
-              uses: actions/github-script@v5
-              with:
-                script: |
-                    const { owner, repo } = context.repo
-                    const { number } = context.issue
-                    const { id } = await github.rest.actions.createWorkflowRunApproval({
-                    owner,
-                    repo,
-                    run_id: number
-                    })
-                    console.log(`Created approval with id ${id}`)
-            - name: Deploy Bicep
-                uses: Azure/cli@v1
-                with:
-                    inlineScript: |
-                    az bicep deploy --file src/main.bicep --parameters src/parameters/${{ github.event.inputs.environment }}.bicepparam
+  deploy:
+    name: 'Deploy Bicep - ${{ github.event.inputs.environment }}'
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: 'Az CLI login'
+        uses: azure/login@v1
+        with:
+          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+      - name: Bicep What-If
+        id: whatif
+        uses: Azure/cli@v1
+        with:
+          inlineScript: |
+            az bicep what-if --file src/main.bicep --parameters src/parameters/${{ github.event.inputs.environment }}.bicepparam
+      - name: Show What-If Plan
+        run: |
+          echo "${{ steps.whatif.outputs.stdout }}"
+      - name: Wait for approval
+        uses: actions/github-script@v5
+        with:
+          script: |
+            const { owner, repo } = context.repo
+            const { number } = context.issue
+            const { id } = await github.rest.actions.createWorkflowRunApproval({
+            owner,
+            repo,
+            run_id: number
+            })
+            console.log(`Created approval with id ${id}`)
+      - name: Deploy Bicep
+        uses: Azure/cli@v1
+        with:
+          inlineScript: |
+            az bicep deploy --file src/main.bicep --parameters src/parameters/${{ github.event.inputs.environment }}.bicepparam
