--- a/.github/workflows/shared.deploy_bicep.yaml
+++ b/.github/workflows/shared.deploy_bicep.yaml
@@ -14,7 +14,10 @@ on:
 
 jobs:
   deploy:
-    name: 'Deploy Bicep - ${{ github.event.inputs.environment }}'
+    env:
+      ENVIRONMENT: ${{ github.event.inputs.environment }}
+      LOCATION: ${{ github.event.inputs.location }}
+    name: 'Deploy Bicep - $ENVIRONMENT'
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -27,10 +30,8 @@ jobs:
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
       - name: Bicep What-If
         id: whatif
-        uses: Azure/cli@v1
-        with:
-          inlineScript: |
-            az deployment sub what-if --name whatif-${{ github.run_id }} --template-file src/main.bicep --parameters rc/parameters/${{ github.event.inputs.environment }}.bicepparam --location ${{ github.event.inputs.location }} > whatif 
+        run: |
+          az deployment sub what-if --name whatif --template-file src/main.bicep --parameters src/parameters/${{ env.ENVIRONMENT }}.bicepparam --location ${{ env.LOCATION }} > whatif 
       - name: Create String Output
         id: whatif-string
         run: |
