--- a/.github/workflows/shared.deploy_bicep.yaml
+++ b/.github/workflows/shared.deploy_bicep.yaml
@@ -3,7 +3,7 @@ name: Deploy Bicep
 on:
   workflow_call:
     inputs:
-      environment:
+      deployEnv:
         required: true
         description: 'The environment to deploy to and what parameters to use'
         type: string
@@ -14,10 +14,7 @@ on:
 
 jobs:
   deploy:
-    env:
-      ENVIRONMENT: ${{ github.event.inputs.environment }}
-      LOCATION: ${{ github.event.inputs.location }}
-    name: 'Deploy Bicep - $ENVIRONMENT'
+    name: 'Deploy Bicep - ${{ inputs.deployEnv }}'
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -31,7 +28,7 @@ jobs:
       - name: Bicep What-If
         id: whatif
         run: |
-          az deployment sub what-if --name whatif --template-file src/main.bicep --parameters src/parameters/${{ env.ENVIRONMENT }}.bicepparam --location ${{ env.LOCATION }} > whatif 
+          az deployment sub what-if --name whatif --template-file src/main.bicep --parameters src/parameters/${{ inputs.deployEnv }}.bicepparam --location ${{ inputs.location }} > whatif 
       - name: Create String Output
         id: whatif-string
         run: |
