--- a/.github/workflows/shared.deploy_bicep.yaml
+++ b/.github/workflows/shared.deploy_bicep.yaml
@@ -28,7 +28,7 @@ jobs:
       - name: Bicep What-If
         id: whatif
         run: |
-          az deployment sub what-if --name whatif --template-file src/main.bicep --parameters src/parameters/${{ inputs.deployEnv }}.bicepparam --location ${{ inputs.location }} > whatif 
+          az deployment sub what-if --name whatif --template-file src/main.bicep --parameters src/parameters/${{ inputs.deployEnv }}.bicepparam --location ${{ vars.LOCATION }} > whatif 
       - name: Create String Output
         id: whatif-string
         run: |
@@ -70,4 +70,4 @@ jobs:
       uses: Azure/cli@v1
       with:
         inlineScript: |
-          az deployment sub create --location ${{ inputs.location }} --template-file src/main.bicep --parameters src/parameters/${{ inputs.deployEnv }}.bicepparam
+          az deployment sub create --location ${{ vars.LOCATION }} --template-file src/main.bicep --parameters src/parameters/${{ inputs.deployEnv }}.bicepparam
